--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "cheerio": "^1.0.0-rc.6",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
